...
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="83dp"
            android:scrollbars="vertical" />

    <Button
        android:id="@+id/bank"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/backtobank"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bankcoins"
        android:onClick="bankcoins" />
...
